--- a/app.css
+++ b/app.css
@@ -1,3 +1,25 @@
 #stationimage{display: block;
     margin-left: auto;
     margin-right: auto; height:150px;width:275px;margin-bottom:10px; margin-top:10px;background-size:cover;background-position:center center;-webkit-border-radius:10px;border-radius:10px;border:1px solid #444;-webkit-box-shadow:inset 0 0 2px rgba(0, 0, 0, 0.4)}
+
+
+	.phoney {
+	        background: -webkit-gradient(linear,left top,left bottom,color-stop(0, rgb(112,112,112)),color-stop(0.51, rgb(94,94,94)),color-stop(0.52, rgb(57,57,57)));
+	        background: -moz-linear-gradient(center top,rgb(112,112,112) 0%,rgb(94,94,94) 51%,rgb(57,57,57) 52%);
+	      }
+	
+		.phoneytitle {
+		        text-shadow: 0 -1px 0 #000;
+		        color: #fff;
+		        font-family: Helvetica Neue, Helvetica, arial;
+		        font-size: 16px;
+		        padding: 4px 28px 0px 8px;
+		        font-weight: bold;
+		        background: url(resource/arrow.png) 95% 50% no-repeat;
+		      }
+		.phoneytext {
+			color:#fff;
+			font-size:12px;
+	        padding: 0px 24px 2px 10px;
+			text-overflow:ellipsis;
+		}
