--- a/app.css
+++ b/app.css
@@ -35,3 +35,14 @@
 			text-overflow:ellipsis;
 			overflow: hidden;  
 		}
+
+.x-list-item-label{font-weight:bold;line-height:18px}
+.x-list-item-label span{display:block;padding-top:2px;font-size:14px;font-weight:normal;color:#666}
+.headshot{float:left;height:37px;width:37px;margin-right:10px;background-size:cover;background-position:center center;background:#ddd;-webkit-border-radius:3px;border-radius:3px;-webkit-box-shadow:inset 0 0 2px rgba(0, 0, 0, 0.6)}
+/*		
+div.station{width:80%;padding:0 0 0 0;font-size:22px;font-weight:bold}
+div.station span{display:block;font-size:14px;font-weight:normal;color:#666}
+.top{padding:22px;height:100px} 
+.top > *{float:left}
+.headshot{float:left;height:37px;width:37px;margin-right:10px;background-size:cover;background-position:center center;background:#ddd;-webkit-border-radius:3px;border-radius:3px;-webkit-box-shadow:inset 0 0 2px rgba(0, 0, 0, 0.6)}		
+*/
